Java version downgrade from 17 to 11